[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "database_console"
version = "0.0.1"
description = "Execute SQL queries directly from Frappe/ERPNExt desk"
authors = [
	{ name = "Anthony Emmanuel", email = "mymi14s@hotmail.com" },
]
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
dependencies = [
	"frappe",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["database_console*"]

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0 <16.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
